# Install_lib_meshbool

./: .gitignore  CMakeLists.txt  README.md  main.cpp
arrangements/code/: CMakeLists.txt  aux_structure.cpp  aux_structure.h  debug.h  fast_trimesh.cpp  fast_trimesh.h  intersection_classification.cpp  intersection_classification.h  io_functions.cpp  io_functions.h  processing.cpp  processing.h  solve_intersections.cpp  solve_intersections.h  tree.h  triangle_soup.cpp  triangle_soup.h  triangulation.cpp  triangulation.h  utils.h
code/: CMakeLists.txt  booleans.cpp  booleans.h  foctree.cpp  foctree.h
